# spotify-song-genre-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  infer.py  predictions.csv.dvc  pyproject.toml  train.py
.dvc/: config
models/: .gitignore  dt_clf.skops.dvc
spoty_gp/: __init__.py
spoty_gp/conf/: config.yaml
spoty_gp/transformers/: __init__.py  data_transformers.py
