[tool.poetry]
name = "spotify-song-genre-prediction"
version = "0.1.0"
description = "Genre prediction for a spotify song"
authors = ["Nikita Kirillov <conv.lizzard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
