[tool.poetry]
name = "spotify-song-genre-prediction"
version = "0.1.0"
description = "Genre prediction for a spotify song"
authors = ["Nikita Kirillov <conv.lizzard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.6.0"
dvc = "^3.38.1"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = ["E203", "E501", "W503", "B950"]
max-complexity = 12
select = ["B", "C", "E", "F", "W", "B9"]
per-file-ignores = [
    "**/__init__.py:F401",
    "types.py:F401"
]

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
